--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 <body>
 	<center><p><font><h1 id="id2"><I>Who was the Founder of NetScape?</I></h1></font></p></center>
 	<center><img src="https://d2bs8hqp6qvsw6.cloudfront.net/article/images/750x750/dimg/netscape-1.jpg" height="550px" width="1000px"></center>	
-	<a href=""><center><button class="btn btn-lg btn-outline-primary btn-active">Marc Andreessen</button></a><a href=""><button class="btn btn-lg btn-outline-primary btn-active">Marc Andrew</button><a href=""><button class="btn btn-lg btn-outline-primary btn-active">Marc Anderson</button><a href=""><button class="btn btn-lg btn-outline-primary btn-active">Marc Ruffalo
+	<a href="https://albertlacerna.github.io/6-for-6/"><center><button class="btn btn-lg btn-outline-primary btn-active">Marc Andreessen</button></a><a href="https://albertlacerna.github.io/lost/"><button class="btn btn-lg btn-outline-primary btn-active">Marc Andrew</button><a href="https://albertlacerna.github.io/lost/"><button class="btn btn-lg btn-outline-primary btn-active">Marc Anderson</button><a href="https://albertlacerna.github.io/lost/"><button class="btn btn-lg btn-outline-primary btn-active">Marc Ruffalo
 </button></center>
 	
